# eurobound

./: .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
api/: spatial_routes.py  user_routes.py
backend/app/api/: __init__.py  spatial_routes.py
backend/app/core/: __init__.py  logger.py
backend/app/models/: user_model.py
backend/app/schemas/: __init__.py  user_schema.py
core/: database.py  logger.py
frontend/: __init__.py  app.py
models/: __init__.py  spatial_model.py  user_model.py
schemas/: spatial_schema.py  user_schema.py
scripts/: init_db.py
