[project]
name = "eurobound"
version = "0.1.0"
description = "Sistema Hexagonal de Análise Cartográfica e Planejamento de Mudança"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Karine Ribeiro" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic[email]>=2.6.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.14.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "colorama>=0.4.6",
    "streamlit>=1.32.0",
    "streamlit-folium>=0.18.0",
    "shapely>=2.0.0",
    "types-shapely>=2.1.0.20260603",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "alembic>=1.13.0"]
